1.21.7 + WorldMGR save on Arena create to file, Virtualthread and other ops, todo.